Correcting vertical alignment of logo vs. cover image

--- a/docs/css/pariyatti.css
+++ b/docs/css/pariyatti.css
@@ -7,7 +7,7 @@
 
 .cover {
   text-align: center;
-  margin-top: -102px;
+  margin-top: -72px;
 }
 
 .store-buttons {
